test/integration/bad/lang/incomplete10.stan
transformed data {
  vector[2] foo = [ ;
}
